# fingerd

./: README.md  finger.db  fingerd.cabal
src/: Debug.hs  FingerdLib.hs  Fingerm.hs  Main.hs  Modify.hs  ModifyDB.hs
