name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evenbrenden/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Even Brenden
maintainer:          evenbrenden@gmail.com
copyright:           2019 Even Brenden
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       FingerdLib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable fingerm
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Fingerm.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network

library
  ghc-options:         -Wall
  exposed-modules:     FingerdLib
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , raw-strings-qq
                     , sqlite-simple
                     , text
